# predictive-pod-autoscaler

./: .gitignore  .releaserc  404.html  CHANGELOG.md  LICENSE  README.md  architecture.html  getting-started.html  hk.pkl  index.html  index.yaml  installation.html  mise.toml  mlops.code-workspace  reference.html  sitemap.xml  skills-lock.json  usage.html  versions.json
.github/workflows/: ci.yaml  deploy-docs.yaml
.zed/: settings.json
1.4.0/: 404.html  index.html  sitemap.xml
1.4.0/architecture/: index.html
1.4.0/getting-started/: index.html
1.4.0/installation/: index.html
1.4.0/reference/: index.html
1.4.0/release-notes/: index.html
1.4.0/search/: search_index.json
1.4.0/usage/: index.html
1.5.0/: 404.html  index.html  sitemap.xml
app/pipeline/: Dockerfile  pyproject.toml
app/pipeline/scripts/: generate_pipeline.py
app/pipeline/src/: pipeline.py
architecture/: index.html
chart/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
docs/: mise.toml  mkdocs.yml  pitchfork.toml  pyproject.toml
getting-started/: index.html
installation/: index.html
master/: 404.html  index.html  sitemap.xml
reference/: index.html
release-notes/: index.html
search/: search_index.js  search_index.json
usage/: index.html
v1.0.0/: 404.html  index.html  sitemap.xml
v1.1.0/: 404.html  index.html  sitemap.xml
v1.2.0/: 404.html  index.html  sitemap.xml
v1.3.0/: 404.html  index.html  sitemap.xml
v1.4.0/: 404.html  index.html  sitemap.xml
v1.5.0/: 404.html  index.html  sitemap.xml
v1.6.0/: 404.html  index.html  sitemap.xml
(+81 files in other folders)
