[project]
name = "pipeline"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "hera>=6.0.0",
    "kubernetes>=35.0.0",
    "pandas>=2.3.3",
    "prometheus-api-client>=0.7.2",
    "prophet>=1.3.0",
]

[tool.ty.rules]
unresolved-import = "ignore"
invalid-return-type = "ignore"
invalid-argument-type = "ignore"

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
]
